--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
         <div class="about-content section-content">
           <p class="text left">
             Hey! My name is Mitch, and I'm a frontend web developer with 3+
-            years of experience. I'm a Penn State graduate with a Bachelor's
+            years' experience. I'm a Penn State graduate with a Bachelor's
             degree in Cyber Security, and I'm also a Ironhack Miami Bootcamp
             graduate with a certification in Full Stack Web Development. I like
             taking on new challenges, and working with new technologies. I have
