--- a/index.html
+++ b/index.html
@@ -123,14 +123,11 @@
         <div class="about-content section-content">
           <p class="text left">
             Hey! My name is Mitch, and I'm a frontend web developer with 3+
-            years' experience. I'm a Penn State graduate with a Bachelor's
-            degree in Cyber Security, and I'm also a Ironhack Miami Bootcamp
-            graduate with a certification in Full Stack Web Development. I like
-            taking on new challenges, and working with new technologies. I have
-            experience in building complex React user interfaces, and a massive
-            passion for all things related to blockchain technology. My goal is
-            to develop innovative & aesthetic applications that will shape the
-            future of society.
+            years of experience. I like taking on new challenges, and working
+            with new technologies. I have experience in building complex user
+            interfaces coupled with a passion for learning blockchain
+            technology. My goal is to develop innovative & aesthetically
+            pleasing web apps that will shape the future of society.
           </p>
           <img
             class="circle transition9"
