--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
         <div class="about-content section-content">
           <p class="text left">
             Hey! My name is Mitch, and I'm a frontend web developer with 3+
-            years of experience. I like taking on new challenges, and working
+            years of experience. I like taking on new challenges and working
             with new technologies. I have experience in building complex user
             interfaces coupled with a passion for learning blockchain
             technology. My goal is to develop innovative & aesthetically
