--- a/index.html
+++ b/index.html
@@ -259,11 +259,21 @@
                 <a target="_blank" href="https://github.com/ClubQuarentini">
                   Github
                 </a>
-                <a target="_blank" href="https://rb.gy/nykqru"> Live Link </a>
+                <a
+                  target="_blank"
+                  href="https://inspiring-darwin-d61e6d.netlify.app"
+                >
+                  Live Link
+                </a>
               </div>
             </div>
             <div class="mobile-links">
-              <a target="_blank" href="https://rb.gy/nykqru"> Live Link </a>
+              <a
+                target="_blank"
+                href="https://inspiring-darwin-d61e6d.netlify.app"
+              >
+                Live Link
+              </a>
               <a target="_blank" href="https://github.com/ClubQuarentini">
                 Github
               </a>
